o.txt
"make" -f nbproject/Makefile-Debug.mk QMAKE= SUBPROJECTS= .build-conf
make[1]: Entering directory '/home/kurt/NetBeansProjects/23tree-in-cpp'
"make"  -f nbproject/Makefile-Debug.mk dist/Debug/GNU-Linux/23tree-in-cpp
make[2]: Entering directory '/home/kurt/NetBeansProjects/23tree-in-cpp'
mkdir -p build/Debug/GNU-Linux
rm -f "build/Debug/GNU-Linux/debug.o.d"
g++ -std=c++14   -c -g -MMD -MP -MF "build/Debug/GNU-Linux/debug.o.d" -o build/Debug/GNU-Linux/debug.o debug.cpp
In file included from debug.cpp:2:0:
include/tree23.h:977:46: error: prototype for ‘void tree23<Key, Value>::iterator_base::getInternalNodeSuccessor(tree23<Key, Value>::Node23*) const’ does not match any in class ‘tree23<Key, Value>::iterator_base’
 template<class Key, class Value> inline void tree23<Key, Value>::iterator_base::getInternalNodeSuccessor(Node23 *pnode) const noexcept     
                                              ^
include/tree23.h:258:18: error: candidate is: tree23<Key, Value>::Node23* tree23<Key, Value>::iterator_base::getInternalNodeSuccessor(tree23<Key, Value>::Node23*) const
          Node23 *getInternalNodeSuccessor(Node23 *pnode) const noexcept;
                  ^
include/tree23.h:996:88: error: prototype for ‘std::pair<tree23<Key, Value>::Node23*, int> tree23<Key, Value>::iterator_base::getLeafNodeSuccessor(tree23<Key, Value>::Node23*) const’ does not match any in class ‘tree23<Key, Value>::iterator_base’
 template<class Key, class Value> std::pair<typename tree23<Key, Value>::Node23 *, int> tree23<Key, Value>::iterator_base::getLeafNodeSuccessor(Node23 *pnode) const noexcept
                                                                                        ^
include/tree23.h:260:36: error: candidate is: std::pair<tree23<Key, Value>::Node23*, int> tree23<Key, Value>::iterator_base::getLeafNodeSuccessor() const
          std::pair<Node23 *, int>  getLeafNodeSuccessor() const noexcept;
                                    ^
nbproject/Makefile-Debug.mk:68: recipe for target 'build/Debug/GNU-Linux/debug.o' failed
make[2]: *** [build/Debug/GNU-Linux/debug.o] Error 1
make[2]: Leaving directory '/home/kurt/NetBeansProjects/23tree-in-cpp'
nbproject/Makefile-Debug.mk:61: recipe for target '.build-conf' failed
make[1]: *** [.build-conf] Error 2
make[1]: Leaving directory '/home/kurt/NetBeansProjects/23tree-in-cpp'
nbproject/Makefile-impl.mk:39: recipe for target '.build-impl' failed
make: *** [.build-impl] Error 2
